# mcp_storage

./: .dockerignore  .env.docker  .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  PLAN.md  README.md  adapter.go  config.go  docker-compose.yml  docs_mcp_go_lib_glued.txt  go.mod  go.sum  jsonrpc.go  logger.go  main.go  mcp_spec  mysql.go  postgres.go  protocol.go  pyproject.toml  server.go.old  session.go  test_client.py  tools.go  transport.go
.claude/: settings.local.json
.cursor/rules/: generalrules.mdc
docs/: MCP_protocol_specs.md  MCP_python_library_guide.md
mcp_client/: __init__.py  __main__.py  client.py
mcp_server/: __main__.py  server.py
