[project]
name = "mcp-storage"
version = "0.1.0"
description = "MCP server for database connectivity - PostgreSQL and MySQL"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "database", "postgresql", "mysql", "sql"]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anyio>=4.5",
    "click>=8.1.0",
    "httpx>=0.27",
    "mcp",
    "PyYAML>=6.0",
    "psycopg2-binary>=2.9.5",
    "pymysql>=1.0.2",
    "tabulate>=0.9.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
]

[project.scripts]
mcp-storage = "mcp_server.server:main"
server = "mcp_server.server:main"
client = "mcp_client.client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_simple_tool", "mcp_client"]

[tool.pyright]
include = ["mcp_simple_tool", "mcp_client"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.uv]
dev-dependencies = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]
